compiler/testData/diagnostics/tests/sealed/NeverObject.kt
<!ILLEGAL_MODIFIER!>sealed<!> object Sealed {

}
